assets/css/style.css
/* ... */
/* -------------------------------------------- (Extra Small) Mobile---------------------------------------------------------- */


/* ------------------------------------------------ Home Page -------------------------------*/

@media (min-width: 320px) and (max-width: 575px) {
	.navbar {
		margin-top: -40px;
	}
	.navbar-brand {
		margin-left: 5px;
		margin-top: 55px;
		padding-bottom: 0px;
	}
	.grow a:hover {
		transform: scale(0.9);
	}
	.hero-outer {
		height: 650px;
		width: 100%;
		overflow: hidden;
		position: relative;
	}
	.about-container {
		background-color: rgba(195, 136, 27, 0.5);
		color: #584628;
        height: 285px;
        margin-top: -20px;
	}
	.title-text-about {
		text-align: center;
		color: #584628;
		padding-top: 15px;
		text-transform: uppercase;
		word-spacing: 5px;
		font-size: larger;
	}
	.about {
		justify-content: center;
		align-items: center;
		color: #584628;
		text-align: center;
		font-size: large;
		padding: 5px;
		margin-top: -10px;
	}
	.owner-img {
		max-width: 100%;
		height: auto;
		margin: 0px auto;
	}
	.owner-text {
		display: flex;
		justify-items: center;
		text-align: justify;
		padding: 25px;
		color: hsla(38, 38%, 25%, 0.89);
	}
	.title-text {
		text-align: center;
		color: #c4881be3;
		padding-top: 25px;
		padding-left: 10px;
		padding-right: 10px;
		text-transform: uppercase;
		font-size: x-large;
	}
	.yoga-img {
		display: none;
	}
	.yoga-text {
		text-align: justify;
		padding: 40px;
	}
	.online-session {
		margin-top: 40px;
		margin-bottom: 40px;
	}
	/* ------------------------------------------------ What I Do Page -------------------------------*/
	.yoga-heading {
		margin-top: 30px;
	}
	.page-header {
		margin-top: 30px;
	}
	what-img {
		display: block;
		margin-left: auto;
		margin-right: auto;
		width: 70%;
	}
	.kundalini-container {
		padding: 20px;
	}
	.kundalini-img {
		margin-top: 10px;
	}
	.description-text {
		color: hsla(38, 38%, 25%, 0.89);
		text-align: justify;
		font-size: larger;
		margin: 0 auto;
		padding-top: 30px;
	}
	.methods-text {
		color: hsla(38, 38%, 25%, 0.89);
		text-align: center;
		font-size: larger;
		margin-top: 50px;
		margin-left: 20px;
		padding-right: 20px;
		margin-bottom: 50px;
	}
	.quote-text {
		text-align: center;
		font-size: larger;
		text-shadow: 5px 3px 10px rgba(0, 0, 0, 0.281);
		padding-top: 10px;
		padding-right: 30px;
		padding-left: 30px;
		color: #c4881be3;
		margin-top: 50px;
		margin-bottom: 50px;
	}
	.shaman-img {
		max-width: 100%;
		height: auto;
	}
	.shaman-second-img {
		max-width: 100%;
		height: auto;
	}
	.breathing-img {
		display: none;
	}
	.btn-class-shaman {
		margin-top: 30px;
	}
	.btn-class-kundalini {
		display: table;
		margin: 0 auto;
		margin-top: 30px;
		margin-bottom: 30px;
		color: #fafafa;
		background-color: #c4881be3;
		width: 200px;
	}
	/* ------------------------------------------------ Events Page ---------------------------------------------------*/
	.retreat-img img {
		margin-bottom: 10px;
	}
	.video-position video {
		width: 80%;
		display: block;
		margin-left: auto;
		margin-right: auto;
	}
	.workshop-img {
		margin-left: 10px;
		margin-bottom: 30px;
		margin-top: 60px;
	}
	.workshop {
		margin-top: 20px;
		padding: 20px;
	}
}


/* ======================================================= Low Resolution Tablets, Mobiles (Landscape) ========================== */


/* ------------------------------------------------ Home Page ---------------------------------------------------*/

@media (min-width: 576px) and (max-width: 767px) {
	.navbar {
		margin-top: -40px;
	}
	.navbar-brand {
		margin-left: 5px;
		margin-top: 45px;
		padding-bottom: 0px;
	}
	.grow a:hover {
		transform: scale(0.9);
	}
	.hero-outer {
		height: 655px;
		width: 100%;
		overflow: hidden;
		position: relative;
	}
	.about-container {
		background-color: rgba(195, 136, 27, 0.5);
		height: 400px;
	}
	.title-text-about {
		text-align: center;
		color: #584628;
		padding-top: 70px;
		text-transform: uppercase;
		word-spacing: 5px;
		font-size: xx-large;
		margin-top: -20px;
	}
	.about {
		justify-content: center;
		align-items: center;
		color: #584628;
		text-align: center;
		font-size: larger;
		padding-top: 15px;
		margin-top: -30px;
		padding-left: 10px;
		padding-right: 10px;
	}
	.owner-img {
		max-width: 100%;
		height: auto;
		margin-top: 8px;
		margin-bottom: 30px;
	}
	.owner-text {
		display: flex;
		justify-items: center;
		text-align: justify;
		padding: 25px;
		color: hsla(38, 38%, 25%, 0.89);
	}
	.yoga-img {
		display: block;
		margin-left: auto;
		margin-right: auto;
		width: 30%;
	}
	.yoga-text {
		text-align: justify;
		padding: 45px;
	}
	.online-session {
		margin-top: 50px;
		margin-bottom: 50px;
	}
	/* -----------------------------------------------What I Do Page --------------------------------*/
	.methods-text {
		padding-left: 0px;
		padding-right: 0px;
		margin-left: 0px;
	}
	.quote-text {
		padding: 60px;
		margin-bottom: 0px;
		padding-bottom: 0px;
	}
	.description-text {
		margin: 0 auto;
		padding-top: 30px;
	}
	.kundalini-img {
		margin-top: 10px;
		display: block;
		margin-left: auto;
		margin-right: auto;
		width: 70%;
	}
	.kundalini-btn-parent {
		display: flex;
	}
	.btn-class-kundalini {
		justify-items: center;
		margin-top: 40px;
		margin-bottom: 50px;
	}
	/* -----------------------------------------------Events Page --------------------------------*/
	.video-position video {
		width: 70%;
		display: block;
		margin-left: auto;
		margin-right: auto;
	}
	.workshop-img {
		margin-left: 5px;
		margin-bottom: 30px;
		margin-top: 60px;
	}
	.workshop {
		margin-top: 20px;
		padding: 20px;
	}
	.retreat-img img {
		margin-bottom: 20px;
	}
}
/* ... */

